@@ -1,5 +1,5 @@
 /*
-  Copyright (c) 2006-2009 Gordon Gremme <gremme@zbh.uni-hamburg.de>
+  Copyright (c) 2006-2010 Gordon Gremme <gremme@zbh.uni-hamburg.de>
   Copyright (c) 2006-2008 Center for Bioinformatics, University of Hamburg
 
   Permission to use, copy, modify, and distribute this software for any
@@ -30,6 +30,7 @@ const GtNodeVisitorClass* gt_extract_feat_visitor_class(void);
 GtNodeVisitor*            gt_extract_feat_visitor_new(GtRegionMapping *rm,
                                                    const char*, bool join,
                                                    bool translate,
+                                                   unsigned long width,
                                                    GtFile *outfp);
 
 #endif
