@@ -4,6 +4,7 @@ changes in version 1.3.6 (2010-08-06)
 - the tool `gt bioseq` has been renamed to `gt seq`
 - `gt seq` has new options -o, -gzip, -bzip2 and -force
 - `gt stat` has new options -o, -gzip, -bzip2 and -force
+- `gt extractfeat` has new option -width
 
 
 changes in version 1.3.5 (2010-07-12)
